--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="="/brahmakosh-logo.png" />
+    <link rel="icon" type="image" href="/brahmakosh-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brahmakosh</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
